--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "airbnb"
   ],
   "license": "MIT",
-  "main": "index.js",
+  "main": "tslint-config-euclid.json",
   "name": "tslint-config-euclid",
   "repository": {
     "type": "git",
@@ -39,7 +39,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "version": "0.0.1",
+  "version": "0.0.2",
   "files": [
     "/.package.json",
     "/.LICENSE",
