--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "tslint-config-airbnb": "^5.11.1",
     "tslint-config-airbnb-base": "^0.2.0",
     "tslint-eslint-rules": "^5.4.0",
-    "tslint-eslint-rules-recommended": "^1.2.0"
+    "tslint-eslint-rules-recommended": "^1.2.0",
+    "tslint-react": "^3.6.0"
   },
   "description": "The TSLint configuration I use for Euclid and other Alexandrian projects.",
   "devDependencies": {
@@ -39,7 +40,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "version": "0.0.2",
+  "version": "0.0.3",
   "files": [
     "/.package.json",
     "/.LICENSE",
