--- a/tslint-config-euclid.json
+++ b/tslint-config-euclid.json
@@ -4,15 +4,26 @@
     "tslint:latest",
     "tslint-eslint-rules-recommended",
     "tslint-config-airbnb",
-    "tslint-config-airbnb-base"
+    "tslint-config-airbnb-base",
+    "tslint-react"
   ],
   "jsRules": {},
   "rules": {
+    "align": [
+      true,
+      "statements",
+      "members"
+    ],
     "import-name": false,
     "no-consecutive-blank-lines": [
       true,
       2
     ],
+    "no-implicit-dependencies": [
+      true,
+      "dev"
+    ],
+    "no-unused-variable": false,
     "object-literal-sort-keys": false,
     "variable-name": [
       true,
@@ -20,16 +31,6 @@
       "check-format",
       "allow-leading-underscore",
       "allow-pascal-case"
-    ],
-    "no-unused-variable": false,
-    "align": [
-      true,
-      "statements",
-      "members"
-    ],
-    "no-implicit-dependencies": [
-      true,
-      "dev"
     ]
   }
 }
