feat: align quote style with airbnb
The quote style for jsx attributes was single-quote instead of
double-quote which is incorrect for conformance to the airbnb
style-guide.

--- a/tslint-config-euclid.json
+++ b/tslint-config-euclid.json
@@ -2,10 +2,10 @@
   "defaultSeverity": "error",
   "extends": [
     "tslint:latest",
+    "tslint-react",
     "tslint-eslint-rules-recommended",
     "tslint-config-airbnb",
-    "tslint-config-airbnb-base",
-    "tslint-react"
+    "tslint-config-airbnb-base"
   ],
   "jsRules": {},
   "rules": {
@@ -31,6 +31,12 @@
       "check-format",
       "allow-leading-underscore",
       "allow-pascal-case"
+    ],
+    "quotemark": [
+      true,
+      "single",
+      "avoid-templates",
+      "jsx-double"
     ]
   }
 }
