feat: change `no-console` from error to warning

--- a/tslint-config-euclid.json
+++ b/tslint-config-euclid.json
@@ -19,6 +19,9 @@
       true,
       2
     ],
+    "no-console": {
+      "severity": "warning"
+    },
     "no-implicit-dependencies": [
       true,
       "dev"
