feat: disable prefer conditional expression and update packages
Disable prefer conditional expression instead of multiple
assignments. This would create massive, and unreadable
ternary expressions which I do not find acceptable.

Also update the dependencies as they have gotten a few
updates.

Signed-off-by: David Piper <david.piper@mailfence.com>

--- a/tslint-config-euclid.json
+++ b/tslint-config-euclid.json
@@ -28,6 +28,7 @@
     ],
     "no-unused-variable": false,
     "object-literal-sort-keys": false,
+    "prefer-conditional-expression": false,
     "quotemark": [
       true,
       "single",
