--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
     "tslint-eslint-rules": "^5.4.0",
     "tslint-eslint-rules-recommended": "^1.2.0",
     "tslint-config-airbnb": "^5.11.1",
-    "tslint-config-airbnb-base": "^0.2.0",
+    "tslint-config-airbnb-base": "^0.3.0",
     "tslint-react": "^3.6.0"
   },
   "description": "The TSLint configuration I use for Euclid and other Alexandrian projects.",
   "devDependencies": {
-    "@commitlint/cli": "^7.5.0",
+    "@commitlint/cli": "^7.5.2",
     "@commitlint/config-conventional": "^7.5.0",
-    "commitlint": "^7.5.0",
+    "commitlint": "^7.5.2",
     "husky": "^1.3.1",
-    "tslint": "^5.12.1",
-    "typescript": "^3.3.3"
+    "tslint": "^5.14.0",
+    "typescript": "^3.3.3333"
   },
   "homepage": "https://github.com/dbpiper/tslint-config-euclid#readme",
   "husky": {
@@ -37,10 +37,8 @@
     "type": "git",
     "url": "git+https://github.com/dbpiper/tslint-config-euclid.git"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "version": "0.0.8",
+  "scripts": {},
+  "version": "1.0.0",
   "files": [
     "/.package.json",
     "/.LICENSE",
