fix: turn off interface rule as it doesn't seem to follow @types
Signed-off-by: David Piper <david.piper@mailfence.com>

--- a/tslint-config-euclid.json
+++ b/tslint-config-euclid.json
@@ -15,6 +15,7 @@
       "members"
     ],
     "import-name": false,
+    "interface-name": "never-prefix",
     "no-consecutive-blank-lines": [
       true,
       2
