chore: resolve problem with previous fix
Signed-off-by: David Piper <david.piper@mailfence.com>

--- a/tslint-config-euclid.json
+++ b/tslint-config-euclid.json
@@ -15,7 +15,7 @@
       "members"
     ],
     "import-name": false,
-    "interface-name": "never-prefix",
+    "interface-name": false,
     "no-consecutive-blank-lines": [
       true,
       2
